@@ -63,6 +63,8 @@ Month: Month
 Year: Year
 display-weekends-help: Include weekends when viewing a week.
 Display weekends in week view: Display weekends in week view
+display-desc-print-day-help: Include event descriptions in printer-friendly version of day view.
+Display description in printer day view: Display description in printer day view
 Yes: Yes
 No: No
 date-format-help: Specifies the preferred date format.
