@@ -1,4 +1,6 @@
 Verion 0.9.43dev (?? ??? 2003)
+  - Patch 853298: allow event description to appear in day view for
+    printer-friendly (enabled by new system setting)
   - Added ability to use custom header and trailer from System Settings page
   - Fixed bug 826653,825315: could not add events as public user event when
     system settings were configured to allow it
